# legal-ai-audit-harness

./: .gitignore  ARTIFACT.md  README.md  pyproject.toml
audit_harness/: __init__.py  cli.py  model.py
docs/: paper_mapping.md
manuscript/: ai_law_case_recommendation_verifiability.tex
policy/: legal_output_policy.json
scripts/: build_blind_coding_packets.py  build_contestation_challenges.py  build_cross_engine_model_outputs.py  build_holdout_validation.py  build_issue_ablations.py  build_model_output_adversarial.py  build_model_output_evidence_ladder.py  build_model_output_repairs.py  build_source_chain_attacks.py  collect_issue_public_outputs.py  collect_public_retrieval_benchmark.py  collect_public_system_outputs.py  collect_real_cases.py  run_annotation_robustness.py  run_annotation_uncertainty_analysis.py  run_baseline_comparison_analysis.py  run_blind_coding_study.py  run_certificate_tamper_analysis.py  run_claim_anchor_analysis.py  run_construct_operationalization_coverage.py  run_full_validation.py  run_gate_ablation_analysis.py  run_gate_contrast_witness_analysis.py  run_issue_family_generalization.py  run_jurisdiction_profile_analysis.py  run_metamorphic_policy_tests.py  run_metric_separation_analysis.py  run_model_identity_invariance.py  run_multiaxis_generalization.py  run_policy_constants_replay.py  run_policy_family_robustness.py  run_policy_mutation_analysis.py  run_query_perturbation_analysis.py  run_query_portfolio_frontier.py  run_ranked_retrieval_metric_analysis.py  run_ranking_visibility_analysis.py  run_repair_frontier_analysis.py  (+11 more)
(+3110 files in other folders)
